Update api for consistency
